--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                 <input type="text" class="form-control" placeholder="Enter your task" id="addtaskinput" />
                 <input type="hidden" id="saveindex">
               </div>
-              <button type="button" class="btn btn-success mr-sm-2" id="addtaskbtn">
+              <button type="button" class="btn btn-primary mr-sm-2" id="addtaskbtn">
                 Add 
               </button>
-              <button type="button" class="btn btn-success mr-sm-2" id="savetaskbtn" style="display: none;">
+              <button type="button" class="btn btn-danger mr-sm-2" id="savetaskbtn" style="display: none;">
                 Save
               </button>
               <button type="button" id="deleteallbtn" class="btn btn-danger">
