--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
       <div class="row justify-content-md-center">
         <div class="col-sm-12 col-md-8">
-          <h1>Welcome to To do App</h1>
+          <h1 class="text-warning">My To do App</h1>
           <div class="todo-inner">
             <div class="form-row">
               <div class="col-8 mr-sm-2">
